# base58-turbo

./: Cargo.toml  README.md
.github/workflows/: miri.yml  release.yml  tests.yml
benches/: encoding_bench.rs
docs/: README.md  design.md  ecosystem_comparison.md  faq.md  verification.md
docs/benchmarks/: README.md  intel_i7_8750h.md  intel_xeon_8488c.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_all_modes.rs
src/: decode.rs  encode.rs  lib.rs  serde.rs  xmr.rs
tests/: test-classic.rs  test-xmr.rs
