[package]
name = "base58-turbo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Hacer"]

[features]
default = ["std"]
std = []

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }
bs58 = "0.5"
base58 = "0.2"
five8 = "1"
base58-turbo = { path = "." }

[[bench]]
name = "encoding_bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true 

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
