[package]
name = "base58-turbo"
version = "0.1.0"
rust-version = "1.86"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Hacer"]

[features]
default = ["serde"]
std = []
serde = ["std", "dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.10"
criterion = { version = "0.8", features = ["html_reports"] }
bs58 = "0.5"
base58 = "0.2"
five8 = "1"
serde_json = "1"
base58-turbo = { path = "." }

[[bench]]
name = "encoding_bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
