[package]
name = "base58-turbo"
version = "0.1.0"
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Hacer"]
description = "A high-performance Base58 encoder/decoder for Rust, optimized for high-throughput systems."
repository = "https://github.com/hacer-bark/base58-turbo"
documentation = "https://docs.rs/base58-turbo"
keywords = ["base58", "encoding", "decoding", "performance", "crypto"]
categories = ["encoding", "cryptography", "no-std"]

[features]
default = ["std"]
std = []
serde = ["std", "dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.10"
criterion = { version = "0.8", features = ["html_reports"] }
bs58 = "0.5"
base58 = "0.2"
five8 = "1"
serde_json = "1"
base58-turbo = { path = "." }

[[bench]]
name = "encoding_bench"
harness = false
