[package]
name = "base58-turbo-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
base58-turbo = { path = ".." } 

[[bin]]
name = "fuzz_all_modes"
path = "fuzz_targets/fuzz_all_modes.rs"
test = false
doc = false
bench = false
